--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -72,8 +72,9 @@
     "\\begin{equation}\n",
     "y=\\left\\{\n",
     "             \\begin{array}{svm}\n",
-    "             w_d^Tx^\\left(i\\right)  + b_d \\ge 1, & \\forall y = 1 \\\\\n",
-    "             w_d^Tx^\\left(i\\right) + b_d \\le 1, & \\forall y = -1 \\\\ \n",
+    "             w_d^Tx^\\left(i\\right)  + b_d \\ge 1 \\\\\n",
+    "             \\\\\n",
+    "             w_d^Tx^\\left(i\\right) + b_d \\le 1 \\\\ \n",
     "             \\end{array}\n",
     "\\right.\n",
     "\\end{equation}\n",
