--- a/Logistic_regression.ipynb
+++ b/Logistic_regression.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "#### 1.1 概述\n",
     "\n",
-    "逻辑斯蒂回归（logistic regression）是在数据科学领域最常用到的方法之一，虽然名字为”回归“，但是主要是解决分类问题。\n",
+    "逻辑斯蒂回归（logistic regression）是在数据科学领域最常用到的方法之一，虽然被称为”回归“，但是主要是解决分类问题。\n",
     "\n",
     "在逻辑回归中，我们会得到一个事件的概率值，当>=0.5时，事件发生；当<0.5时，事件不发生。\n",
     "  \n",
