--- a/Ensemble_Learning.ipynb
+++ b/Ensemble_Learning.ipynb
@@ -196,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 1.2.1 Soft Voting Classifier"
+    "##### 1.2.1 Hard Voting Classifier"
    ]
   },
   {
